--- a/src/components/CurrentPricing/currentpricing.css
+++ b/src/components/CurrentPricing/currentpricing.css
@@ -1,14 +1,29 @@
+
 .currPricing {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    height: 100vh;
+    padding-top: 20vh;
+}
+
+.card {
+    background-color: bisque;
     padding: 10px;
+}
+
+#card > * {
+    display: block;
+    margin-top: 30px;
 }
 
 .pricing {
     display: flex;
     flex-direction: row;
+    justify-content: center;
 }
 
 .symbol {
     font-weight: bold;
+    padding-right: 10px;
 }
